classDiagram
classDef blueSky fill:#87CEEB,stroke:#000000,stroke-width:1px

  class User:::blueSky {
    +int id
    +string name
    +string email
    +string password
    +created_at
    +updated_at
  }
  

  class Article:::classDef {
    +int id
    +string title
    +string content
    +int user_id
    +int category_id
    +created_at
    +updated_at
  }

  class Category:::classDef {
    +int id
    +string name
    +created_at
    +updated_at
  }

  class Tag:::classDef {
    +int id
    +string name
    +created_at
    +updated_at
  }

  class Article_Tag:::classDef {
    +int article_id
    +int tag_id
    +created_at
    +updated_at
  }

  class Comment:::classDef{
    +int id
    +string content
    +int commentable_id
    +string commentable_type
    +int user_id
    +created_at
    +updated_at
  }

  Article "n" --> "1" Category
  Article "1" --> "n" Comment
  Article "1" -- "n" Article_Tag
  Tag "1" -- "n" Article_Tag
  User "1" --> "n" Comment
  User "1" --> "n" Article

